--- a/css/main.css
+++ b/css/main.css
@@ -276,6 +276,10 @@ form .form_errors {
   max-width: 140px;
   text-align: left;
 }
+.filter-video select,
+.filter-video input[type="text"] {
+  max-width: 140px;
+}
 .catalog_product_comments_comment {
   position: relative;
 }
@@ -1202,9 +1206,173 @@ form .form_errors {
   width: 36px;
 }
 /*============================================================================*/
+/*glDatePicker.default.css*/
+.gldp-default {
+  position: absolute;
+  font-family: 'helvetica';
+}
+/* Core style for every cell */
+.gldp-default .core {
+  position: relative;
+  float: left;
+  padding: 0;
+  margin: 0;
+  background: -webkit-linear-gradient(top, #ffffff 0%, #dadada 100%);
+  /* Chrome10+,Safari5.1+ */
+  background: -moz-linear-gradient(top, #ffffff 0%, #dadada 100%);
+  /* FF3.6+ */
+  background: -ms-linear-gradient(top, #ffffff 0%, #dadada 100%);
+  /* IE10+ */
+  background: linear-gradient(to bottom, #ffffff 0%, #dadada 100%);
+  /* W3C */
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  font-size: 14px;
+  text-align: center;
+  cursor: pointer;
+  color: #222;
+}
+/* Cell border */
+.gldp-default .border {
+  border-style: solid;
+  border-width: 0;
+  border-color: #888;
+}
+/* Month/Year text and select */
+.gldp-default .monyear,
+.gldp-default .monyear select {
+  font-size: 16px !important;
+  font-weight: bold;
+}
+/* Month/Year text */
+.gldp-default .monyear span {
+  margin: 0 5px 0 5px;
+}
+/* Prev/Next arrows */
+.gldp-default .prev-arrow,
+.gldp-default .next-arrow {
+  color: #222;
+}
+.gldp-default .prev-arrow:active,
+.gldp-default .next-arrow:active {
+  color: #f00;
+}
+.gldp-default .prev-arrow-off,
+.gldp-default .next-arrow-off {
+  color: #222;
+  -moz-opacity: 0.15;
+  opacity: 0.15;
+}
+/* Days of the week */
+.gldp-default .dow {
+  color: #fff;
+  font-weight: bold;
+  cursor: wait !important;
+  background: -webkit-linear-gradient(top, #ff0000 0%, #ffcccc 100%);
+  /* Chrome10+,Safari5.1+ */
+  background: -moz-linear-gradient(top, #ff0000 0%, #ffcccc 100%);
+  /* FF3.6+ */
+  background: -ms-linear-gradient(top, #ff0000 0%, #ffcccc 100%);
+  /* IE10+ */
+  background: linear-gradient(to bottom, #ff0000 0%, #ffcccc 100%);
+  /* W3C */
+}
+/* Weekdays */
+.gldp-default .mon,
+.gldp-default .tue,
+.gldp-default .wed,
+.gldp-default .thu,
+.gldp-default .fri {
+  font-weight: bold;
+}
+/* Weekend days */
+.gldp-default .sat,
+.gldp-default .sun {
+  color: #3858a8;
+  font-weight: bold;
+}
+/* Selectable days that are outside of current month being shown */
+.gldp-default .outday {
+  color: #666666 !important;
+}
+/* Hover */
+.gldp-default .mon:hover,
+.gldp-default .tue:hover,
+.gldp-default .wed:hover,
+.gldp-default .thu:hover,
+.gldp-default .fri:hover,
+.gldp-default .sat:hover,
+.gldp-default .sun:hover {
+  background: -webkit-linear-gradient(top, #fcfff4 0%, #e9e9ce 100%);
+  /* Chrome10+,Safari5.1+ */
+  background: -moz-linear-gradient(top, #fcfff4 0%, #e9e9ce 100%);
+  /* FF3.6+ */
+  background: -ms-linear-gradient(top, #fcfff4 0%, #e9e9ce 100%);
+  /* IE10+ */
+  background: linear-gradient(to bottom, #fcfff4 0%, #e9e9ce 100%);
+  /* W3C */
+}
+/* Non-Selectable days */
+.gldp-default .noday {
+  color: #444;
+  font-weight: normal;
+  cursor: wait !important;
+  background: -webkit-linear-gradient(top, #aaaaaa 0%, #8a8a8a 100%);
+  /* Chrome10+,Safari5.1+ */
+  background: -moz-linear-gradient(top, #aaaaaa 0%, #8a8a8a 100%);
+  /* FF3.6+ */
+  background: -ms-linear-gradient(top, #aaaaaa 0%, #8a8a8a 100%);
+  /* IE10+ */
+  background: linear-gradient(to bottom, #aaaaaa 0%, #8a8a8a 100%);
+  /* W3C */
+}
+/* Currently selected day */
+.gldp-default .selected {
+  color: #fff;
+  font-weight: bold;
+  border-color: #c00;
+  background: -webkit-linear-gradient(top, #e8bf88 0%, #ffc19d 100%);
+  /* Chrome10+,Safari5.1+ */
+  background: -moz-linear-gradient(top, #e8bf88 0%, #ffc19d 100%);
+  /* FF3.6+ */
+  background: -ms-linear-gradient(top, #e8bf88 0%, #ffc19d 100%);
+  /* IE10+ */
+  background: linear-gradient(to bottom, #e8bf88 0%, #ffc19d 100%);
+  /* W3C */
+}
+/* Today */
+.gldp-default .today {
+  color: #fff;
+  font-weight: bold;
+  border-color: #00c;
+  background: -webkit-linear-gradient(top, #88bfe8 0%, #9dc1ff 100%);
+  /* Chrome10+,Safari5.1+ */
+  background: -moz-linear-gradient(top, #88bfe8 0%, #9dc1ff 100%);
+  /* FF3.6+ */
+  background: -ms-linear-gradient(top, #88bfe8 0%, #9dc1ff 100%);
+  /* IE10+ */
+  background: linear-gradient(to bottom, #88bfe8 0%, #9dc1ff 100%);
+  /* W3C */
+}
+/* Special */
+.gldp-default .special {
+  color: #fff;
+  font-weight: bold;
+  border-color: #0c0;
+  background: -webkit-linear-gradient(top, #88e888 0%, #9dff9d 100%);
+  /* Chrome10+,Safari5.1+ */
+  background: -moz-linear-gradient(top, #88e888 0%, #9dff9d 100%);
+  /* FF3.6+ */
+  background: -ms-linear-gradient(top, #88e888 0%, #9dff9d 100%);
+  /* IE10+ */
+  background: linear-gradient(to bottom, #88e888 0%, #9dff9d 100%);
+  /* W3C */
+}
+/*============================================================================*/
 /*Sortable.js*/
 .sortable-ghost {
-  opacity: .2;
+  opacity: 0.2;
 }
 .drag-handle {
   margin-right: 10px;
