--- a/less/lib.less
+++ b/less/lib.less
@@ -249,7 +249,7 @@ form .form_errors {
             }
         }
         
-        .filter_date{
+        .filter_date {
             float: left;
             margin: 0;
             
@@ -290,6 +290,14 @@ form .form_errors {
     .form_errors {
         max-width: 140px;
         text-align: left;
+    }
+}
+
+.filter-video {
+    
+    select,
+    input[type="text"] {
+        max-width: 140px;
     }
 }
 
